# mmup

./: Makefile.am  README.md  configure.ac  mmup_common.h  mmup_mix.c  mmup_pcm.c  mmup_sine.c  mmup_ssilence.c  mmup_vol.c
tests/1/: Makefile
tests/2/: 1-1.bar  1-2.bar  1-3.bar  1-4.bar  2-3.bar  2-4.bar  3-1.bar  3-3.bar  3-4.bar  mkbar.sh  mktune.sh
