bin_PROGRAMS = mmup_mix mmup_pcm mmup_sine mmup_ssilence mmup_vol

mmup_mix_SOURCES = mmup_mix.c mmup_common.h
mmup_pcm_SOURCES = mmup_pcm.c mmup_common.h
mmup_ssilence_SOURCES = mmup_ssilence.c mmup_common.h
mmup_vol_SOURCES = mmup_vol.c mmup_common.h


mmup_sine_SOURCES = mmup_sine.c mmup_common.h
